# protocol-buffers

./: .drone.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  vision_service.proto
.drone/: slack.tpl
cmake/: FindGRPC.cmake
debian/: README.Debian  changelog  control  copyright  libmatrixio-protos-dev.install  libmatrixio-protos.install  libmatrixio_protos-dev.install  libmatrixio_protos.install
helpers/zwave/: CMakeLists.txt  zwave_proto_gen.cpp
malos/: driver.proto  hal.proto  heartbeat.proto  zwave_commands.proto
matrix/: CMakeLists.txt
matrix/malos/v1/: comm.proto  driver.proto  hal.proto  io.proto  sense.proto  zwave_commands.proto
matrix/recognition/v1/: recognition.proto  recognition_service.proto
matrix/vision/v1/: vision.proto  vision_service.proto
matrix_io/: CMakeLists.txt
matrix_io/common/: collections.proto  entity.proto
matrix_io/malos/: CMakeLists.txt
matrix_io/malos/v1/: CMakeLists.txt  comm.proto  driver.proto  hal.proto  io.proto  maloseye.proto  sense.proto  zwave_commands.proto
matrix_io/recognition/v1/: recognition.proto  recognition_service.proto
matrix_io/vision/v1/: model.proto  vision.proto  vision_service.proto
matrixlabs/: CMakeLists.txt
matrixlabs/malos/v1/: driver.proto  hal.proto  zwave_commands.proto
matrixlabs/vision/v1/: recognition.proto  recognition_service.proto  vision.proto  vision_service.proto
nodejs/: README.md  build.sh
python/: README.rst  build.sh  buildtest.sh  setup.py
vision/: recognition.proto  recognition_service.proto  vision.proto  vision_service.proto
